--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,10 @@
 .sidebar a:hover {
   color: #f1f1f1;
 }
-
-/* Style the main content */
-.main {
-  margin-left: 160px; /* Same as the width of the sidenav */
-  padding: 0px 10px;
+div.content {
+  margin-left: 160px;
+  padding: 1px 16px;
+  height: 1000px;
 }
 
 /* Add media queries for small screens (when the height of the screen is less than 450px, add a smaller padding and font-size) */
@@ -38,22 +37,20 @@
     height: auto;
     position: relative;
   }
-  .main {
-    margin-left: 160px; 
-    padding: 0px 10px;
-  }
   .sidebar a {float: left;}
   div.content {margin-left: 0;}
 }
 
 /* On screens that are less than 400px, display the bar vertically, instead of horizontally */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 350px) {
+  
   .sidebar a {
     text-align: center;
     float: none;
   }
-  .main {
-    margin-left: 10px; /* Same as the width of the sidenav */
-    padding: 0px 10px;
-  }
+  
+}
+.main {
+  margin-left: 160px; /* Same as the width of the sidenav */
+  padding: 0px 10px;
 }
